fix: Long "Person" type profile field spills out of input box.
With long names, the "Person" type field input spills out of its box, both in Settings > Profile UI (top screenshot) and the "Manage user" UI (bottom screenshot).So, text overflowing can be managed by abbreviating the long names.

--- a/static/styles/input_pill.css
+++ b/static/styles/input_pill.css
@@ -36,10 +36,14 @@
             border-radius: 4px 0 0 4px;
         }
 
-        .pill-value {
+         .pill-value {
             margin: 0 5px;
+            white-space: nowrap;
+            width: 50px;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
-
+        
         .exit {
             opacity: 0.5;
             font-size: 1.3em;
